2017-01-27  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/prefs.c (prefs_set): Fix possible use-after-free when old and
	value point to the same data.

2017-01-23  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Module "openvas_logging" is now in gvm-libs/base.

	* misc/openvas_logging.c, misc/openvas_logging.h: Removed.

	* misc/CMakeLists.txt: Removed handling of this module.

	* COPYING: Removed the files respectively.

	* misc/arglists.c, misc/bpf_share.c, misc/ids_send.c, misc/network.c,
	misc/pcap.c, misc/plugutils.c: Include gvm/base/logging.h instead of
	openvas_logging.h.

	* nasl/charcnv.c, nasl/exec.c, nasl/nasl_builtin_nmap.c,
	nasl/nasl_builtin_openvas_tcp_scanner.c, nasl/nasl_builtin_synscan.c,
	nasl/nasl_cert.c, nasl/nasl_crypto2.c, nasl/nasl_crypto.c,
	nasl/nasl_debug.c, nasl/nasl_grammar.tab.c, nasl/nasl_grammar.y,
	nasl/nasl_scanner_glue.c, nasl/nasl_smb.c, nasl/nasl_snmp.c,
	nasl/nasl_socket.c, nasl/nasl_ssh.c, nasl/nasl_wmi.c:
	Include gvm/base/logging.h instead of ../misc/openvas_logging.h.

2017-01-23  Michael Wiegand <michael.wiegand@greenbone.net>

	* misc/openvas_logging.c (log_func_for_gnutls): Remove superfluous
	Doxygen 'ref' command without existing target.

2017-01-22  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* misc/openvas_logging.c (log_func_for_gnutls): Make public.
	(setup_log_handlers): Remove code for ssetting gnutls logging in
	order to make this module indpendent of gnutls.

	* misc/openvas_logging.h: Add proto for now-public
	function log_func_for_gnutls().

2017-01-20  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Module "openvas_uuid" is now in gvm-libs/util.

	* misc/openvas_uuid.c, misc/openvas_uuid.h: Removed.

	* misc/CMakeLists.txt: Removed handling of this module.

	* INSTALL: Remove uuid as dependency. Add missing requiremnt
	to gvmlib.

	* COPYING: Removed the files respectively.

	* misc/openvas_auth.c: Remove unneeded include.
